Document _csrf_token form field

--- a/_posts/2015-03-17-security.md
+++ b/_posts/2015-03-17-security.md
@@ -101,13 +101,13 @@ Using this handler is straight-forward.
 ALL("/books.*", new CSRFHandler());
 ```
 
-**2.** Add a `${csrfToken}` hidden input value on all forms that are POSTed to this protected path expression
+**2.** Add a `_csrf_token` / `${csrfToken}` hidden input value on all forms that are POSTed to this protected path expression
 
 ```html
 <html>
 	<body>
 		<form method="post" action="/books/5/rename">
-			<input type="hidden" value="${csrfToken}" name="csrfToken" >
+			<input type="hidden" name="_csrf_token" value="${csrfToken}">
 			<input placeholder="Enter a new book title" name="bookTitle">
 			<input type="submit" value="Rename">
 		</form>
