--- a/_posts/2015-06-01-forms.md
+++ b/_posts/2015-06-01-forms.md
@@ -6,6 +6,15 @@ date: 2015-06-01 10:11:42
 order: 55
 ---
 
+### Reserved Form Field Names
+
+The following field names are reserved for Pippo.
+
+- `_method`
+- `_content`
+- `_content_type`
+- `_csrf_token`
+
 ### Cross-Site Request Forgery (CSRF) Protection
 
 See [Security](security.html).
